fixed background image and text alignment

--- a/frontend/PasswordPage.CSS
+++ b/frontend/PasswordPage.CSS
@@ -1,5 +1,16 @@
 body {
     text-align: center;
+    background-image: url("https://theloverspassport.com/wp-content/uploads/2021/03/IMG_5965-scaled.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% 25%;
+    background-attachment: local;
+    background-size: cover;
+}
+
+@media only screen and (max-width: 1100px) {
+    body {
+        background-size: 1100px;
+    }
 }
 
 h1 {
@@ -35,9 +46,12 @@ div a {
     display: inline-block;
 }
 
-emailLabel {
-    text-align: left !important;
-    padding-right: 30px;
+.emailLabel {
+    padding-right: 180px;
+}
+
+.pwdLabel {
+    padding-right: 150px;
 }
 
 .submitBtn {
@@ -48,3 +62,8 @@ emailLabel {
     margin-top: 15px;
     padding-right: 100px;
 }
+
+.inputs {
+    /* background-color: yellow; */
+}
+
